<resources>
    <string name="app_name">PostMaker</string>
    <string name="register_your_business">Register Your Business</string>
    <string name="company_name">Company Name</string>
    <string name="enter_company_name">Enter Company Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="optional">(Optional)</string>
    <string name="company_website">Company Website</string>
    <string name="enter_company_website">Enter Company Website</string>
    <string name="email_id">Email ID</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="company_address">Company Address</string>
    <string name="enter_company_address">Enter Company Address</string>
    <string name="save">Save</string>
    <string name="upload_logo">Upload Logo</string>
    <string name="add_logo">Add Logo</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit</string>
    <string name="bussiness">Bussiness</string>
    <string name="drawer_open" translatable="false">open</string>
    <string name="drawer_close" translatable="false">close</string>
    <string name="rateapp">Rate App</string>
    <string name="more_app">More App</string>
    <string name="share_app">Share App</string>
    <string name="bydrawer">ByDrawer</string>
    <string name="clickscreen">ClickScreen</string>
    <string name="bysplashscreen">BySpalshScreen</string>
    <string name="update">Update</string>
    <string name="daily_image">Daily Image</string>
    <string name="upcoming_festival">Upcoming Festival</string>
    <string name="image_data">imageData</string>
    <string name="user_detail">userDetail</string>
    <string name="view_all">View All</string>
    <string name="categories">Categories</string>
    <string name="complited_festival">Complited Festival</string>
    <string name="position">Position</string>
    <string name="download">Download</string>



    <string name="label_brush">Brush</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_eraser_mode">Eraser Mode</string>
    <string name="label_text">Text</string>
    <string name="label_filter">Filter</string>
    <string name="label_adjust">Adjust</string>
    <string name="msg_save_image">Are you want to exit without saving image ?</string>
    <string name="app_intent_name">PhotoEditor</string>
    <string name="msg_save_image_to_share">Please save image to share</string>
    <string name="msg_share_image">Share Image</string>
</resources>