<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/profileRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/profileTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textColor="@color/black"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/editTV"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/profileTV"
            android:gravity="right"
            android:text="@string/edit"
            android:textColor="@color/my_statusbar_color" />

        <TextView
            android:id="@+id/mobile1TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profileTV"
            android:layout_marginTop="5dp"
            android:gravity="right"
            android:text="+91258632541" />

    </RelativeLayout>

    <View
        android:id="@+id/firstView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/profileRL"
        android:background="@color/gray" />

    <RelativeLayout
        android:id="@+id/bussinessRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_below="@+id/firstView"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/bussinessTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bussiness"
            android:textColor="@color/black"
            android:textSize="22dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bussinessTV">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="5dp"
                android:background="@color/white"
                android:elevation="150dp"
                xmlns:app="http://schemas.android.com/tools"
                card_view:cardUseCompatPadding="true"
                card_view:cardPreventCornerOverlap="false"
                card_view:cardCornerRadius="10dp"
                android:padding="10dp"
                app:cardCornerRadius="5dp"
                app:cardMaxElevation="150dp">

                <ImageView
                    android:id="@+id/bussinessLogoIV"
                    android:adjustViewBounds="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/companyNameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/cardView"
                android:text="CompanyName" />
        </RelativeLayout>
    </RelativeLayout>

    <View
        android:id="@+id/secondView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/bussinessRL"
        android:background="@color/gray" />

    <RelativeLayout
        android:id="@+id/rateAppRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/secondView"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp">

        <ImageView
            android:id="@+id/rateAppIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_star" />

        <TextView
            android:id="@+id/rateAppTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:textColor="@color/dark_black"
            android:layout_toRightOf="@id/rateAppIV"
            android:text="@string/rateapp"
            android:textSize="18dp" />

        <ImageView
            android:id="@+id/rightArrow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_next" />
    </RelativeLayout>

    <RelativeLayout

        android:id="@+id/shareAppRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rateAppRL"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp">

        <ImageView
            android:id="@+id/shareAppIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_share" />

        <TextView
            android:id="@+id/shareAppTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:textColor="@color/dark_black"
            android:layout_toRightOf="@id/shareAppIV"
            android:text="@string/share_app"
            android:textSize="18dp" />

        <ImageView
            android:id="@+id/rightArrow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_next" />
    </RelativeLayout>

    <RelativeLayout

        android:id="@+id/moreAppRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shareAppRL"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp">

        <ImageView
            android:id="@+id/moreAppIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_more" />

        <TextView
            android:id="@+id/moreAppTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/moreAppIV"
            android:text="@string/more_app"
            android:textColor="@color/dark_black"
            android:textSize="18dp" />

        <ImageView
            android:id="@+id/rightArrow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_next" />
    </RelativeLayout>

</RelativeLayout>