<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:attrs="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@drawable/toolbarshadow">

        <ImageView
            android:id="@+id/drawerIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/drawerbutton" />
    </RelativeLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:fillViewport="true"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar">

        <com.ridecoder.greetingcardmaker.threewaysolutions.utils.CustomViewPager
            android:id="@+id/sliderViewPager"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <com.rd.PageIndicatorView
            android:id="@+id/pageIndicatorView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sliderViewPager"
            android:layout_centerHorizontal="true"
            app:piv_animationType="worm"
            app:piv_dynamicCount="true"
            app:piv_interactiveAnimation="true"
            app:piv_radius="3dp"
            app:piv_select="1"

            app:piv_selectedColor="@color/black"
            app:piv_unselectedColor="@color/gray"
            app:piv_viewPager="@id/sliderViewPager"
            attrs:piv_padding="12dp"
            attrs:piv_radius="8dp" />

        <TextView
            android:id="@+id/DailyImageTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pageIndicatorView"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/daily_image"
            android:textColor="@color/dark_black"
            android:textSize="20dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dailyImageRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/DailyImageTV"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />
        <TextView
            android:id="@+id/upcomingTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dailyImageRV"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/upcoming_festival"
            android:textColor="@color/dark_black"
            android:textSize="20dp" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/upcomingImageRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/upcomingTV"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />
        <TextView
            android:id="@+id/completedTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/upcomingImageRV"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/complited_festival"
            android:textColor="@color/dark_black"
            android:textSize="20dp" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/complitedImageRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/completedTV"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="20dp" />
    </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
    <io.supercharge.shimmerlayout.ShimmerLayout
        android:id="@+id/shimmer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="35dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="35dp"
        android:layout_gravity="center_horizontal">
    <Button
        android:id="@+id/floatingBTN"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/edit"/>
    </io.supercharge.shimmerlayout.ShimmerLayout>

</RelativeLayout>